# Ocero-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
source/: Ocero Engine.cbp  Ocero Engine.layout  globals.cpp  globals.h  main.cpp
source/game/: entity.cpp  entity.h  functions.cpp  functions.h  gameplay.cpp  gameplay.h  main_menu.cpp  main_menu.h  sound.cpp  sound.h  trees.cpp  trees.h
source/llm/: llm_functions.cpp  llm_functions.h
source/opengl/: camera_variables.cpp  text_render.cpp  text_render.h  window_functions.cpp  window_functions.h
source/resources/data/: dataCollection.cpp  dataCollection.h
source/resources/textures/: TextAtlas.png~
source/shaders/: billboard_shader.fs  phong_lighting.fs  text_shader.fs  text_shader.vs
source/shapes/: shapes.cpp  shapes.h
